--- a/index.html
+++ b/index.html
@@ -11,7 +11,34 @@
 </head>
 
 <body>
+    <div class="calculator-body">
+        <div class="display">
+            123456
+        </div>
+        <div class="number-btn">
+            <button class="btn" id="0">0</button>
+            <button class="btn" id="1">1</button>
+            <button class="btn" id="2">2</button>
+            <button class="btn" id="3">3</button>
+            <button class="btn" id="4">4</button>
+            <button class="btn" id="5">5</button>
+            <button class="btn" id="6">6</button>
+            <button class="btn" id="7">7</button>
+            <button class="btn" id="8">8</button>
+            <button class="btn" id="9">9</button>
+        </div>
+        <div class="operator-btn">
+            <button class="btn" id="equals">=</button>
+            <button class="btn" id="sum">+</button>
+            <button class="btn" id="subtract">-</button>
+            <button class="btn" id="multiply">x</button>
+            <button class="btn" id="divide">÷</button>
+            <button class="btn" id="exponent">E</button>
+            <button class="btn" id="decimal">.</button>
+            <button class="btn" id="clear-all">C</button>
 
+        </div>
+    </div>
 </body>
 
 </html>
