have buttons all in one grid

--- a/index.html
+++ b/index.html
@@ -13,31 +13,29 @@
 <body>
     <div class="calculator-body">
         <div class="display">
-            123456
+            <p>123456</p>
         </div>
-        <div class="number-btn">
-            <button class="btn" id="0">0</button>
-            <button class="btn" id="1">1</button>
-            <button class="btn" id="2">2</button>
-            <button class="btn" id="3">3</button>
-            <button class="btn" id="4">4</button>
-            <button class="btn" id="5">5</button>
-            <button class="btn" id="6">6</button>
-            <button class="btn" id="7">7</button>
-            <button class="btn" id="8">8</button>
-            <button class="btn" id="9">9</button>
+        <div class="btn-grid">
+            <button class="btn other" id="exponent">E</button>
+            <button class="btn other" id="clear">C</button>
+            <button class="btn other" id="equals">=</button>
+            <button class="btn num" id="one">1</button>
+            <button class="btn num" id="two">2</button>
+            <button class="btn num" id="three">3</button>
+            <button class="btn num" id="four">4</button>
+            <button class="btn num" id="five">5</button>
+            <button class="btn num" id="six">6</button>
+            <button class="btn num" id="seven">7</button>
+            <button class="btn num" id="eight">8</button>
+            <button class="btn num" id="nine">9</button>
+            <button class="btn num" id="zero">0</button>
+            <button class="btn num" id="decimal">.</button>
+            <button class="btn operator" id="sum">+</button>
+            <button class="btn operator" id="subtract"> -</button>
+            <button class="btn operator" id="multiply">x</button>
+            <button class="btn operator" id="divide">÷</button>
         </div>
-        <div class="operator-btn">
-            <button class="btn" id="equals">=</button>
-            <button class="btn" id="sum">+</button>
-            <button class="btn" id="subtract">-</button>
-            <button class="btn" id="multiply">x</button>
-            <button class="btn" id="divide">÷</button>
-            <button class="btn" id="exponent">E</button>
-            <button class="btn" id="decimal">.</button>
-            <button class="btn" id="clear-all">C</button>
-
-        </div>
+    </div>
     </div>
 </body>
 
