change naming of div class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="calculator-body">
         <div class="display">
         </div>
-        <div class="btn-grid">
+        <div class="calculator-grid">
             <button class="btn other" id="exponent">E</button>
             <button class="btn other" id="clear">C</button>
             <button class="btn other" id="equals">=</button>
