--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="btn num" id="eight">8</button>
             <button class="btn num" id="nine">9</button>
             <button class="btn num" id="zero">0</button>
-            <button class="btn num" id="decimal">.</button>
+            <button class="btn other" id="decimal">.</button>
             <button class="btn operator" id="sum">+</button>
             <button class="btn operator" id="subtract">-</button>
             <button class="btn operator" id="multiply">x</button>
